k8s/eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: youtube-mood-ingress
  namespace: youtube-mood
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/subnets: subnet-072181101c90b9992,subnet-04f37c6a19affe367,subnet-03d28a15fd32231c0
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: youtube-mood-frontend
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: youtube-mood-frontend
                port:
                  number: 80
